# puffin

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
docs/: README.md  _sidebar.md  index.html  license.md
docs/pages/: errors.md  grammar.md
docs/pages/advanced/: block_function.md  render_function.md  understanding_components.md
docs/pages/components/: flow.md  frame.md  image.md  text.md
docs/pages/design/: grammar.md
docs/pages/getting_started/: basic_syntax.md  components.md  event_handling.md  layouts.md  simple_app.md  types.md  using_files.md
docs/pages/plans/: target.md
docs/pages/props/: colors.md  sizes.md
docs/pages/stdlib/: builtins.md  dict.md  fs.md  list.md  math.md  shell.md  string.md
puffin_ast/: Cargo.toml
puffin_ast/src/: declaration.rs  expression.rs  lib.rs  markup.rs  position.rs  snippet.rs  span.rs  statement.rs  token.rs
puffin_cli/: Cargo.toml
puffin_cli/src/: main.rs
puffin_cli/src/libs/: mod.rs
puffin_codegen/: Cargo.toml
puffin_codegen/src/: codegen.rs  lib.rs  scope.rs
puffin_compiler/: Cargo.toml
puffin_compiler/src/: compiler.rs  lib.rs  scope.rs
puffin_compiler/src/ir/: mod.rs
puffin_parser/: Cargo.toml
puffin_parser/src/: lib.rs
puffin_parser/src/lex/: mod.rs  position.rs  span.rs
puffin_parser/src/parse/: mod.rs  tests.rs
puffin_parser/src/parse/source_test_files/: test.puff
puffin_runtime/: Cargo.toml
puffin_runtime/src/: baselibs.rs  chunk.rs  dom.rs  event.rs  layout.rs  lib.rs  library.rs  op.rs  program.rs  runtime.rs  value.rs  vm.rs
puffin_runtime/src/ui/: mod.rs
puffin_runtime/src/value/: bool.rs  class.rs  derived.rs  dictionary.rs  element.rs  float.rs  function.rs  instance.rs  int.rs  list.rs  mod.rs  module.rs  native_function.rs  native_value.rs  node.rs  object.rs  ops.rs  reactive.rs  string.rs  user_value.rs
puffin_stdlib/: Cargo.toml
puffin_stdlib/src/: declaration.rs  lib.rs
puffin_stdlib/src/base/: array.rs  casting.rs  debug.rs  dictionary.rs  mod.rs  utils.rs
puffin_stdlib/src/base/elements/: flow.rs  frame.rs  hbox.rs  image.rs  input.rs  mod.rs  text.rs
puffin_stdlib/src/core/: dict.rs  fs.rs  list.rs  math.rs  mod.rs  shell.rs  string.rs
puffin_stdlib/src/core/dom/: element.rs  mod.rs
