[workspace]
resolver = "3"
members = [
    "puffin_cli",
    "puffin_parser",
    "puffin_ast",
    "puffin_compiler",
    "puffin_runtime",
]

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

unwrap_used = "deny"
partial_pub_fields = "deny"
str_to_string = "warn"
exit = "deny"
get_unwrap = "deny"
panic = "deny"

# TODO: Following should be enabled before publishing the crate
# cargo = "warn"
# use_debug = "deny"
# print_stdout = { level = "deny", priority = -1 }
# print_stderr = { level = "deny", priority = -1 }
