[package]
name = "puffin_runtime"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
default = ["debug_tracing"]
debug_tracing = ["dep:log"]

[dependencies]
num_enum = "0.7.5"
ratatui = "0.30.0"
thiserror = "2.0.18"
serde = "1.0.228"
serde_derive = "1.0.228"

log = { version = "0.4.29", optional = true }
