[package]
name = "puffin_runtime"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
default = ["debug_tracing"]
debug_tracing = ["dep:log"]

[dependencies]
num_enum = "0.7.5"
ratatui = "0.30.0"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["rc"] }
serde_derive = "1.0.228"

log = { version = "0.4.29", optional = true }
ratatui-image = { version = "10.0.8", default-features = false, features = ["image-defaults", "crossterm"] }
image = "0.25.10"
